@@ -1,3 +1,13 @@
+2007-11-01  Kevin Ollivier  <kevino@theolliviers.com>
+
+        Adding files for wx impl. of editing interfaces.
+
+        Reviewed by Adam Roben.
+
+        * editing/wx: Added.
+        * editing/wx/EditorWx.cpp: Added.
+        (WebCore::Editor::newGeneralClipboard):
+
 2007-11-01  Sam Weinig  <sam@webkit.org>
 
         Reviewed by Adam Roben.
